# pgcrow

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
examples/: game_window.py  transitions.py  window_display.py  window_screen.py  windowgl.py
src/: __init__.py  animation.py  animations.py  config.py  consts.py  event_handler.py  game.py  keyboard.py  maths.py  particles.py  scene_2d.py  scene_manager.py  sprite_sheet.py  sprites.py  timers.py  window.py
src/config/: __init__.py  scenes_config.py  win_config.py
src/inputs/: __init__.py  general.py  joystick.py  keyboard.py  mouse.py
tests/: config.py  game.py  test_utils.py  window.py
